--- a/assets/animal-webpages/african-odysse/african-odyssey.html
+++ b/assets/animal-webpages/african-odysse/african-odyssey.html
@@ -24,11 +24,11 @@
             <img src="../../../assets/logo/Pine-city-zoo-desktop.svg" alt="pine city zoo logo" class="first-logo">
             <nav class="main-navigation--bottom">
                 <ul class="main-navigation__unordered-list">
-                    <li class="list__item list-item-1"><a href="../../../index.html"><img src="#"><br>Home<a></li>
+                    <li class="list__item list-item-1"><a href="../../../index.html"><img src="../../icons/black-outline-home.svg" class="navigation__image--resize"><br>Home<a></li>
 
-                    <li class="list__item list-item-2"><a href="#"><img src="#"><br>About</a></li>
+                    <li class="list__item list-item-2"><a href="../../index-web-pages/about-us.html"><img src="../../icons/about-black-fill-outline.svg" class="navigation__image--resize"><br>About</a></li>
 
-                    <li class="list__item list-item-3"><a href="#"><img src="#"><br>Contact</a></li>
+                    <li class="list__item list-item-3"><a href="../../index-web-pages/contact-us.html"><img src="../../icons/contact-black-outline.svg" class="navigation__image--resize"><br>Contact</a></li>
                 </ul>
             </nav>
             <!-- For mobile navigation menu -->
@@ -45,8 +45,8 @@
                         <li><a href="#">Our Shops</a></li>
                         <li><a href="#">Our Resturant</a></li>
                         <li><a href="#">Our Coffee Shops</a></li>
-                        <li><a href="#">Our Attractions</a></li>
-                        <li><a href="#">Our Map</a></li>
+                        <li><a href="../../index-web-pages/menu webpages/attractions.html">Our Attractions</a></li>
+                        <li><a href="../../index-web-pages/menu webpages/map.html">Our Map</a></li>
                         <li><a href="#">Weather Forecast of the Week</a></li>
                     </ul>
                 </nav>
