--- a/assets/index-web-pages/about-us.html
+++ b/assets/index-web-pages/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="./assets/logo/colorful-panda-favicon.svg">
+    <link rel="icon" href="../logo/colorful-panda-favicon.svg">
     
     <!-- Desktop And Mobile Styles for resposiveness-->
     <link rel="stylesheet" href="../stylesheets/desktop-styles/index.css">
@@ -21,11 +21,11 @@
         <img src="../logo/Pine-city-zoo-desktop.svg" alt="pine city zoo logo" class="first-logo">
         <nav class="main-navigation--bottom">
             <ul class="main-navigation__unordered-list">
-                <li class="list__item list-item-1"><a href="./index.html"><img src="#"><br>Home<a></li>
+                <li class="list__item list-item-1"><a href="../../index.html"><img src="../icons/black-outline-home.svg" class="navigation__image--resize"><br>Home</a></li>
 
-                <li class="list__item list-item-2"><a href="#"><img src="./about-us.html"><br>About</a></li>
+                <li class="list__item list-item-2"><a href="./about-us.html"><img src="../icons/about-black-fill.svg" class="navigation__image--resize"><br>About</a></li>
 
-                <li class="list__item list-item-3"><a href="#"><img src="./contact-us.html"><br>Contact</a></li>
+                <li class="list__item list-item-3"><a href="./contact-us.html"><img src="../icons/contact-black-outline.svg" class="navigation__image--resize"><br>Contact</a></li>
             </ul>
         </nav>
         <!-- For mobile navigation menu -->
@@ -49,5 +49,80 @@
             </nav>
         </div>
     </header>
+    
+    <section class="about-us about-us-background-image--position text--color">
+        <h1 class="about-us-title about-us-title--position text-alignment--center">About Us</h1>
+        <div class="about-section--content-wrapper">
+            <section class="our-story-section">
+                <img src="../logo/colorful-panda-favicon.svg" class="our-story__image">
+                <article class="our-story-section__article">
+                    <h2 class="our-story__heading">Our Story</h2>
+                    <p class="our-story-section__text">
+                        We are more than just a zoo; we are a sanctuary for both animals and humans alike. 
+                        Our mission is to foster understanding and respect for wildlife while promoting conservation 
+                        efforts globally. With a team dedicated to animal welfare and education, we strive to create 
+                        meaningful experiences for visitors of all ages.
+                    </p>
+                </article>
+            </section>
+
+            <section class="why-people-care-section">
+                <h2 class="why-people-care-section__header">Why Should You Care?</h2>
+                <article class="">
+                    <p>
+                        We believe that education is key to fostering empathy and respect for all living beings. 
+                        That's why we go beyond traditional zoo experiences to train regular civilians on how to 
+                        interact with animals. From learning how to hug and kiss to commanding even the most shy 
+                        or aggressive animals, we empower visitors to overcome fear and forge connections.
+                    </p>
+                </article>
+            </section>
+
+            <section class="objectives-care-section">
+                <h2 class="our-objective--padding">Our Objectives</h2>
+                <article>
+                    <ul class="objectives-care__card-list list-bulles---none">
+                        <li>
+                            <img src="../icons/objectives-icons/mission.svg" alt="image of an target">
+                            <h3>Our Mission</h3>
+                            <p>
+                                To promote conservation, education, and empathy through meaningful interactions with wildlife.
+                            </p>
+                        </li>
+
+                        <li>
+                            <img src="../icons/objectives-icons/vission.svg" alt="an image of an eye">
+                            <h3>Our Vision</h3>
+                            <p>
+                                Compassion, respect, sustainability, and integrity guide everything we do.
+                            </p>
+                        </li>
+
+                        <li>
+                            <img src="../icons/objectives-icons/training.svg" alt="a image of gears turning within someones head">
+                            <h3>Our Training</h3>
+                            <p>
+                                Our journey to enable communication between humans and animals has been arduous. 
+                                We've invested in extensive research and training for both employees and animals 
+                                to facilitate understanding and cooperation.
+                            </p>
+                        </li>
+                    </ul>
+                </article>
+            </section>
+
+            <section class="empowerment-section">
+                <h2>Education and Empowerment</h2>
+                <article class="">
+                    <p>
+                        We believe that education is key to fostering empathy and respect for all living beings. 
+                        That's why we go beyond traditional zoo experiences to train regular civilians on how to 
+                        interact with animals. From learning how to hug and kiss to commanding even the most shy 
+                        or aggressive animals, we empower visitors to overcome fear and forge connections.
+                    </p>
+                </article>
+            </section>
+        </div>
+    </section>
 </body>
 </html>
