giant, red-panda webpages complete

--- a/assets/index-web-pages/about-us.html
+++ b/assets/index-web-pages/about-us.html
@@ -40,10 +40,10 @@
                     <li><a href="#">Tickets</a></li>
                     <li><a href="#">Our Zootopia</a></li>
                     <li><a href="#">Our Shops</a></li>
-                    <li><a href="#">Our Resturant</a></li>
-                    <li><a href="#">Our Coffee Shops</a></li>
-                    <li><a href="#">Our Attractions</a></li>
-                    <li><a href="#">Our Map</a></li>
+                    <li><a href="../index-web-pages/menu webpages/resturant.html">Our Resturant</a></li>
+                    <li><a href="../index-web-pages/menu webpages/coffee-shop.html">Our Coffee Shops</a></li>
+                    <li><a href="../index-web-pages/menu webpages/attractions.html">Our Attractions</a></li>
+                    <li><a href="../index-web-pages/menu webpages/map.html">Our Map</a></li>
                     <li><a href="#">Weather Forecast of the Week</a></li>
                 </ul>
             </nav>
