--- a/assets/index-web-pages/menu webpages/coffee-shop.html
+++ b/assets/index-web-pages/menu webpages/coffee-shop.html
@@ -54,7 +54,7 @@
         </section>
     </header>
 
-    <main class="main-background--image main-body--background-adjustment text--color">
+    <main class="main-background--image main-body--background-adjustment main-body--background-property text--color">
         <section class="main">
             <div class="main-divider__logo-div">
                 <img src="../../logo/zoo-coffe.svg" class="main-section__image-logo">
