--- a/assets/index-web-pages/contact-us.html
+++ b/assets/index-web-pages/contact-us.html
@@ -44,7 +44,7 @@
                         <li><a href="../index-web-pages/menu webpages/coffee-shop.html">Our Coffee Shops</a></li>
                         <li><a href="../index-web-pages/menu webpages/attractions.html">Our Attractions</a></li>
                         <li><a href="../index-web-pages/menu webpages/map.html">Our Map</a></li>
-                        <li><a href="#">Weather Forecast of the Week</a></li>
+                        <li><a href="./menu webpages/weather-forcast.html">Weather Forecast of the Week</a></li>
                     </ul>
                 </nav>
             </div>
