--- a/assets/animal-webpages/polar-rim/artic-penguin.html
+++ b/assets/animal-webpages/polar-rim/artic-penguin.html
@@ -43,12 +43,12 @@
                     <ul class="second-navigation__unordered-list">
                         <li><a href="#">Tickets</a></li>
                         <li><a href="#">Our Zootopia</a></li>
-                        <li><a href="#">Our Shops</a></li>
+                        <li><a href="../../index-web-pages/menu webpages/online-shops.html">Our Shops</a></li>
                         <li><a href="../../index-web-pages/menu webpages/resturant.html">Our Resturant</a></li>
                         <li><a href="../../index-web-pages/menu webpages/coffee-shop.html">Our Coffee Shops</a></li>
                         <li><a href="../../index-web-pages/menu webpages/attractions.html">Our Attractions</a></li>
                         <li><a href="../../index-web-pages/menu webpages/map.html">Our Map</a></li>
-                        <li><a href="#">Weather Forecast of the Week</a></li>
+                        <li><a href="../../index-web-pages/menu webpages/weather-forcast.html">Weather Forecast of the Week</a></li>
                     </ul>
                 </nav>
             </div>
