--- a/assets/index-web-pages/menu webpages/attractions assets/pine-city-theatre.html
+++ b/assets/index-web-pages/menu webpages/attractions assets/pine-city-theatre.html
@@ -45,7 +45,7 @@
                     <li><a href="../coffee-shop.html">Our Coffee Shops</a></li>
                     <li><a href="../attractions.html">Our Attractions</a></li>
                     <li><a href="../map.html">Our Map</a></li>
-                    <li><a href="#">Weather Forecast of the Week</a></li>
+                    <li><a href="../weather-forcast.html">Weather Forecast of the Week</a></li>
                 </ul>
             </nav>
         </div>
