--- a/assets/animal-webpages/panda-canyon/giant-panda.html
+++ b/assets/animal-webpages/panda-canyon/giant-panda.html
@@ -59,7 +59,7 @@
                 <h1 class="main-section__heading">GIANT PANDA BEAR</h1>
                 
                 <ul class="main-first-section-unordered-list--flex">
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../panda-canyon/images/large-view/group-pandas_433905-10785.jpg" alt="" aria-label="image of pandas smiling at the camera"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -68,7 +68,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../panda-canyon/images/large-view/random-panda-images/panda-small-new.webp" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -78,7 +78,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../panda-canyon/images/large-view/random-panda-images/panda-bears-climbing-trees.jpg" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -86,7 +86,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../panda-canyon/images/large-view/random-panda-images/baby-panda.webp" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
