--- a/assets/animal-webpages/panda-canyon/red-panda.html
+++ b/assets/animal-webpages/panda-canyon/red-panda.html
@@ -59,7 +59,7 @@
                 <h1 class="main-section__heading">RED PANDA</h1>
                 
                 <ul class="main-first-section-unordered-list--flex">
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../panda-canyon/images/large-view/random-panda-images/red-panda.jpg" alt="" aria-label="image of a red panda smiling at the camera"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -69,7 +69,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../panda-canyon/images/large-view/random-panda-images/red-panda-bamboo.jpg" alt="" aria-label="image of red panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -78,7 +78,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../panda-canyon/images/large-view/random-panda-images/red-pandas-in-trees.jpeg" alt="" aria-label="image of red panda climbing trees"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -86,7 +86,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../panda-canyon/images/large-view/random-panda-images/red-panda-babies.jpg" alt="" aria-label="image of red panda babies"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
