removed centered bio text on animal webpages

--- a/assets/animal-webpages/african-odysse/african-zebra.html
+++ b/assets/animal-webpages/african-odysse/african-zebra.html
@@ -59,7 +59,7 @@
                 <h1 class="main-section__heading">AFRICAN ZEBRA</h1>
                 
                 <ul class="main-first-section-unordered-list--flex">
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../african-odysse/images/african-animal-images/zebra-kind.jpg" alt="" aria-label="image of a group of giant polar bears standing within waters"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
