--- a/assets/animal-webpages/polar-rim/artic-penguin.html
+++ b/assets/animal-webpages/polar-rim/artic-penguin.html
@@ -59,7 +59,7 @@
                 <h1 class="main-section__heading">ARTIC PENGUIN</h1>
                 
                 <ul class="main-first-section-unordered-list--flex">
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/artic-penguin.jpg" alt="" aria-label="image of a group of giant polar bears standing within waters"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -73,7 +73,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/artic-penguin-group.webp" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -82,7 +82,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/artic-penguin-catching-fish.jpg" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -90,7 +90,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/comic-penguin.webp" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
