--- a/assets/animal-webpages/polar-rim/artic-wolf.html
+++ b/assets/animal-webpages/polar-rim/artic-wolf.html
@@ -59,7 +59,7 @@
                 <h1 class="main-section__heading">ARTIC WOLF</h1>
                 
                 <ul class="main-first-section-unordered-list--flex">
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/artic-wolf.jpg" alt="" aria-label="image of a group of giant polar bears standing within waters"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -69,7 +69,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/artic-wolf-pack.webp" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -79,7 +79,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/artic-wolf-feasting.jpg" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -89,7 +89,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/artic-wolf-babies.jpg" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
