--- a/assets/animal-webpages/polar-rim/polar-bear.html
+++ b/assets/animal-webpages/polar-rim/polar-bear.html
@@ -59,7 +59,7 @@
                 <h1 class="main-section__heading">NORTH POLAR BEAR</h1>
                 
                 <ul class="main-first-section-unordered-list--flex">
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/grou-polar-bears.jpeg" alt="" aria-label="image of a group of giant polar bears standing within waters"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -68,7 +68,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/polar-bear-fishing.jpg" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -76,7 +76,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/polar-bear-swimming.jpg" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -88,7 +88,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/polar-bear-babies.jpg" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
