--- a/assets/animal-webpages/polar-rim/artic-fox.html
+++ b/assets/animal-webpages/polar-rim/artic-fox.html
@@ -59,7 +59,7 @@
                 <h1 class="main-section__heading">Artic Fox</h1>
                 
                 <ul class="main-first-section-unordered-list--flex">
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/artic-fox.jpg" alt="" aria-label="image of a group of giant polar bears standing within waters"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -75,7 +75,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/artic-fox-eating.jpg" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -85,7 +85,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/artic-fox-nose-diving.jpg" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
@@ -99,7 +99,7 @@
                         </p>
                     </li>
 
-                    <li class="unordered-list__item text-alignment--center">
+                    <li class="unordered-list__item">
                         <img src="../polar-rim/images/random-artic-images/artic-fox-babies.jpg" alt="" aria-label="image of panda eating bamboo"
                         class="main-first-section__image image--responsive">
                         <p class="unordered-list__font-size">
